--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,3 +3,13 @@ mccabe==0.6.1
 packaging==20.4
 pycodestyle==2.6.0
 pyflakes==2.2.0
+
+# Deps do pytest
+py==1.5.3
+more-itertools==4.1.0
+six==1.11.0
+attrs==18.1.0
+pluggy==0.6.0
+pytest==3.5.1
+
+-r requirements.txt
